[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pydebugstring"
author = "Doug Ransom"
author-email = "doug@ransom.vip"
home-page = "https://github.com/dougransom/pydebugstring"

requires-python=">=3.0"
description-file="README.md"

classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
